Final versions of notebooks done

--- a/Jupyter Notebooks/Seminarski_rad_Hijerarhijsko_sakupljajuće_klasterovanje.ipynb
+++ b/Jupyter Notebooks/Seminarski_rad_Hijerarhijsko_sakupljajuće_klasterovanje.ipynb
@@ -796,14 +796,10 @@
     "    num_of_flights = 0\n",
     "    \n",
     "    if str(id_a) in matrix_columns and id_b in matrix_rows:\n",
-    "       # if len(list(matrix_of_connections.loc[\n",
-    "      #      matrix_of_connections[' Source airport ID'] == id_b][str(id_a)])) == 1:\n",
     "            num_of_flights += list(matrix_of_connections.loc[\n",
     "            matrix_of_connections[' Source airport ID'] == id_b][str(id_a)])[0]\n",
     "        \n",
     "    if str(id_b) in matrix_columns and id_a in matrix_rows:\n",
-    "      #  if len(list(matrix_of_connections.loc[\n",
-    "       #     matrix_of_connections[' Source airport ID'] == id_a][str(id_b)])) == 1:\n",
     "            num_of_flights += list(matrix_of_connections.loc[\n",
     "            matrix_of_connections[' Source airport ID'] == id_a][str(id_b)])[0]\n",
     "    \n",
@@ -823,20 +819,16 @@
    "outputs": [],
    "source": [
     "def light_metric(a,b): #Prvi koraci su identicni kao u prethodnom racunanju;\n",
-    "     #Izdvajamo karakteristike, citamo iz matrice povezanosti, racunamo euklidsko rastojanje\n",
+    "     #Izdvajamo karakteristike, citamo iz matrice povezanosti, racunamo Euklidsko rastojanje\n",
     "    id_a = int(a[2])\n",
     "    id_b = int(b[2])\n",
     "    matrix_columns = matrix_of_connections.columns\n",
     "    matrix_rows = list(matrix_of_connections[' Source airport ID'])\n",
     "    num_of_flights = 0\n",
     "    if str(id_a) in matrix_columns and id_b in matrix_rows:\n",
-    "       # if len(list(matrix_of_connections.loc[\n",
-    "      #      matrix_of_connections[' Source airport ID'] == id_b][str(id_a)])) == 1:\n",
     "            num_of_flights += list(matrix_of_connections.loc[\n",
     "            matrix_of_connections[' Source airport ID'] == id_b][str(id_a)])[0]\n",
     "    if str(id_b) in matrix_columns and id_a in matrix_rows:\n",
-    "      #  if len(list(matrix_of_connections.loc[\n",
-    "       #     matrix_of_connections[' Source airport ID'] == id_a][str(id_b)])) == 1:\n",
     "            num_of_flights += list(matrix_of_connections.loc[\n",
     "            matrix_of_connections[' Source airport ID'] == id_a][str(id_b)])[0]\n",
     "    e = euclidean__distance(a,b)\n",
@@ -1449,7 +1441,7 @@
     }
    ],
    "source": [
-    "# Dalje pokušavamo, sad za veće vrednosti praga\n",
+    "# Dalje smanjujemo vrednost praga\n",
     "model_agglomerative(z=z,df=df,x=x,t=0.55)"
    ]
   },
@@ -2014,7 +2006,7 @@
     }
    ],
    "source": [
-    "# Još povećavamo vrednost t\n",
+    "# Sada drastično smanjujemo prag\n",
     "model_agglomerative(z=z,df=df,x=x,t=0.25)"
    ]
   },
@@ -2090,7 +2082,7 @@
     }
    ],
    "source": [
-    "# Na kraju radi demonstracije, pusticemo za najvecu vrednost t = 1.2.\n",
+    "# Na kraju, radi demonstracije, pustićemo za najveću vrednost t = 1.2.\n",
     "model_agglomerative(z=z,df=df,x=x,t=1.2)"
    ]
   },
@@ -2757,7 +2749,6 @@
     }
    ],
    "source": [
-    "# Mnogo malih klastera u okviru velikih, međusobno isprepletani\n",
     "model_agglomerative(df=df,x=x,z=z,t=0.22)"
    ]
   },
@@ -2966,7 +2957,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Za kraj pokušavamo i sa kriterijumom **Ward** - ove mere."
+    "Za kraj pokušavamo i sa kriterijumom *Ward* - ove mere.\n",
+    "\n",
+    "***NAPOMENA*** : *Ward* - ova mera ne može da se primenjuje sa metrikama koje nisu Euklidsko rastojanje. Ispucavanje izuzetka je ostavljeno radi ilustracije."
    ]
   },
   {
@@ -3802,7 +3795,7 @@
     }
    ],
    "source": [
-    "# Na kraju radi demonstracije, pusticemo za najvecu vrednost t = 1.2.\n",
+    "# Na kraju radi demonstracije, pustićemo za najvecu vrednost t = 1.2.\n",
     "model_agglomerative(z=z,df=df,x=x,t=1.2)"
    ]
   },
@@ -4448,7 +4441,6 @@
     }
    ],
    "source": [
-    "# Mnogo malih klastera u okviru velikih, međusobno isprepletani\n",
     "model_agglomerative(df=df,x=x,z=z,t=0.22)"
    ]
   },
@@ -4631,58 +4623,6 @@
    "source": [
     "model_agglomerative(df=df,x=x,z=z,t=0.3)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Za kraj pokušavamo i sa kriterijumom **Ward** - ove mere."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#z = linkage(x,method = \"ward\", metric = light_metric)\n",
-    "\n",
-    "#plt.figure(figsize = (20,10))\n",
-    "#den = dendrogram(z, labels = x.index,\n",
-    "#                 color_threshold= 0 , distance_sort= True, leaf_font_size= 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model_agglomerative(df=df,x=x,z=z,t= 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#model_agglomerative(df=df,x=x,z=z,t= 5.3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
